plugins {
    id("java-library")
    id "org.jetbrains.kotlin.jvm"
    alias libs.plugins.dokka
}

java {
    apply plugin: 'org.jetbrains.dokka'

    withSourcesJar()
    withJavadocJar()

    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8

}

dependencies {
    implementation("androidx.annotation:annotation:1.5.0")
    implementation "co.nstant.in:cbor:0.9"
    implementation "org.bouncycastle:bcprov-jdk15on:1.69"
    implementation("org.bouncycastle:bcpkix-jdk15on:1.69")

    testImplementation "junit:junit:4.13.2"
    testImplementation "org.bouncycastle:bcprov-jdk15on:1.69"
}